fix navbar becoming transparent on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -4530,7 +4530,6 @@ input[type='button'].btn-block {
     -ms-flex-pack: justify;
     justify-content: space-between;
     padding: 0.5rem 1rem;
-    height: 5rem;
 }
 .navbar > .container,
 .navbar > .container-fluid {
